; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/ingenic/extr_jz4780_aic.c_aic_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/ingenic/extr_jz4780_aic.c_aic_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aic_softc = type { i32, i32 }

@aic_spec = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @aic_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aic_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.aic_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.aic_softc* @device_get_softc(i32 %4)
  store %struct.aic_softc* %5, %struct.aic_softc** %3, align 8
  %6 = load %struct.aic_softc*, %struct.aic_softc** %3, align 8
  %7 = getelementptr inbounds %struct.aic_softc, %struct.aic_softc* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @xdma_channel_free(i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @aic_spec, align 4
  %12 = load %struct.aic_softc*, %struct.aic_softc** %3, align 8
  %13 = getelementptr inbounds %struct.aic_softc, %struct.aic_softc* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @bus_release_resources(i32 %10, i32 %11, i32 %14)
  ret i32 0
}

declare dso_local %struct.aic_softc* @device_get_softc(i32) #1

declare dso_local i32 @xdma_channel_free(i32) #1

declare dso_local i32 @bus_release_resources(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
